<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >


    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hourglass_web_service_endpoint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_endpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/connection_timeout_revision_check"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_timeoutRevCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/connection_timeout_for_update"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_timeoutUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_storage_mode"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_storageMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/subfolder_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_subfolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    
		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/include_regex_filter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_inclFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exclude_regex_filter"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/info_exclFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>